--- a/example-websocket-servesent-back/package.json
+++ b/example-websocket-servesent-back/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat-test-real-time",
+  "name": "example-websocket-servesent-back",
   "version": "0.0.1",
   "description": "",
   "author": "",
