--- a/example-websocket-servesent-front/package.json
+++ b/example-websocket-servesent-front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat-real-front",
+  "name": "example-websocket-servesent-front",
   "private": true,
   "version": "0.0.0",
   "type": "module",
